# rustcraft-voxel

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/render/: state.rs
src/core/shaders/: shader.wgsl
src/core/window/: window.rs
